Unified views' local navigation.

--- a/app/views/admin/links/new.html.haml
+++ b/app/views/admin/links/new.html.haml
@@ -1,6 +1,6 @@
 %h1 Luo uusi linkki linkkikategoriaan '#{@category}'
 
-.context_navi
+#contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_link_category_path(@category)
   = link_to 'Takaisin', admin_link_category_path(@category)
 
