--- a/app/views/admin/seasons/index.html.haml
+++ b/app/views/admin/seasons/index.html.haml
@@ -1,7 +1,7 @@
 %h1= 'Kaudet'
 
-%p
-  %a{:href => new_admin_season_path, :title => 'Luo uusi kausi'}= image_tag('add.png')
+#contextNavi
+  %a{:href => new_admin_season_path, :title => 'Luo uusi kausi'}= image_tag('add.png', :size => '16x16')
   %a{:href => new_admin_season_path}= 'Luo uusi kausi'
   
 = section_selection
