--- a/app/views/admin/link_categories/edit.html.haml
+++ b/app/views/admin/link_categories/edit.html.haml
@@ -1,6 +1,6 @@
 %h1 Muokkaa linkkikategoriaa #{@link_category}
 
-.context_navi
+#contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_link_categories_path 
   = link_to 'Takaisin', admin_link_categories_path
 
