--- a/app/views/admin/link_categories/index.html.haml
+++ b/app/views/admin/link_categories/index.html.haml
@@ -1,7 +1,7 @@
 %h1 Linkkikategoriat
 
 = section_selection
-.context_navi
+#contextNavi
   = link_to image_tag('add.png', :size => '16x16'), new_admin_link_category_path
   = link_to 'Luo uusi linkkikategoria', new_admin_link_category_path
 
