--- a/app/views/admin/links/edit.html.haml
+++ b/app/views/admin/links/edit.html.haml
@@ -1,6 +1,6 @@
 %h1 Muokkaa linkkiä
 
-.context_navi
+#contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_link_category_path(@link.category)
   = link_to 'Takaisin', admin_link_category_path(@link.category)
 
