--- a/app/views/admin/members/new.html.haml
+++ b/app/views/admin/members/new.html.haml
@@ -1,5 +1,7 @@
 %h1 Luo uusi pelaaja
-%p
+
+#contextNavi
+  = link_to image_tag('arrow_left.png', :size => '16x16'), admin_members_path
   = link_to 'Takaisin', admin_members_path
   
 = render :partial => 'form', :locals => {:url => admin_members_path}
