--- a/app/views/admin/news/new.html.haml
+++ b/app/views/admin/news/new.html.haml
@@ -1,6 +1,8 @@
 %h1= t '.title'
 
-%p= link_to 'Takaisin', admin_news_index_path
+#contextNavi
+  = link_to image_tag('arrow_left.png', :size => '16x16'), admin_news_index_path
+  = link_to 'Takaisin', admin_news_index_path
 
 = semantic_form_for @news, :url => admin_news_index_path do |form| 
   = render :partial => 'form', :object => form
