--- a/app/views/admin/partitions/show.html.haml
+++ b/app/views/admin/partitions/show.html.haml
@@ -1,8 +1,12 @@
 %h1 #{@partition} kaudella #{@partition.season} 
 
-%p= link_to 'Takaisin', admin_seasons_path
-%p= link_to_if @partition.team_standings.count > 1, 'Sarjataulukko', edit_multiple_admin_season_partition_team_standings_path(@partition.season, @partition)
-%p= link_to_if @partition.team_standings.count > 1, 'Ottelut', admin_season_partition_matches_path(@partition.season, @partition)
+#contextNavi
+  = link_to image_tag('arrow_left.png', :size => '16x16'), admin_seasons_path
+  = link_to 'Takaisin', admin_seasons_path
+  \|
+  = link_to_if @partition.team_standings.count > 1, 'Sarjataulukko', edit_multiple_admin_season_partition_team_standings_path(@partition.season, @partition)
+  \|
+  = link_to_if @partition.team_standings.count > 1, 'Ottelut', admin_season_partition_matches_path(@partition.season, @partition)
 
 %h2 Joukkueet
 %p
