Added current team link to menu.

--- a/app/views/layouts/admin/_menu.html.haml
+++ b/app/views/layouts/admin/_menu.html.haml
@@ -4,4 +4,5 @@
   %li= link_to 'Tilastot', admin_latest_standings_path
   %li= link_to 'Vieraskirja', admin_comments_path
   %li= link_to 'Pelaajat', admin_members_path
+  %li= link_to 'Joukkue', admin_current_team_path
   %li= link_to 'Linkit', admin_link_categories_path
