--- a/app/views/admin/partitions/show.html.haml
+++ b/app/views/admin/partitions/show.html.haml
@@ -4,14 +4,14 @@
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_seasons_path
   = link_to 'Takaisin', admin_seasons_path
   \|
-  = link_to_if @partition.team_standings.count > 1, 'Sarjataulukko', edit_multiple_admin_season_partition_team_standings_path(@partition.season, @partition)
+  = link_to_if @partition.team_standings.count > 1, 'Sarjataulukko', edit_multiple_admin_partition_team_standings_path(@partition)
   \|
-  = link_to_if @partition.team_standings.count > 1, 'Ottelut', admin_season_partition_matches_path(@partition.season, @partition)
+  = link_to_if @partition.team_standings.count > 1, 'Ottelut', admin_partition_matches_path(@partition)
 
 %h2 Joukkueet
 %p
-  %a{:href => new_admin_season_partition_team_standing_path(@partition.season, @partition), :title => 'Luo uusi joukkue'}= image_tag('add.png')
-  %a{:href => new_admin_season_partition_team_standing_path(@partition.season, @partition)}= 'Luo uusi joukkue'
+  %a{:href => new_admin_partition_team_standing_path(@partition), :title => 'Luo uusi joukkue'}= image_tag('add.png')
+  %a{:href => new_admin_partition_team_standing_path(@partition)}= 'Luo uusi joukkue'
   
 %table
   - for team in @partition.team_standings
