--- a/app/views/admin/team_standings/edit_multiple.html.haml
+++ b/app/views/admin/team_standings/edit_multiple.html.haml
@@ -1,11 +1,11 @@
-%h1 Sarjataulukko kaudella #{@season}
+%h1 Sarjataulukko kaudella #{@partition.season}
 %h2 #{@partition}
 
 #contextNavi
-  = link_to image_tag('arrow_left.png', :size => '16x16'), admin_season_partition_path(@season, @partition)
-  = link_to 'Takaisin', admin_season_partition_path(@season, @partition)
+  = link_to image_tag('arrow_left.png', :size => '16x16'), admin_partition_path(@partition)
+  = link_to 'Takaisin', admin_partition_path(@partition)
 
-= form_tag(update_multiple_admin_season_partition_team_standings_path(@season, @partition), :method => 'put') do
+= form_tag(update_multiple_admin_partition_team_standings_path(@partition), :method => 'put') do
   %table
     %thead
       %tr
