--- a/app/views/admin/team_standings/new.html.haml
+++ b/app/views/admin/team_standings/new.html.haml
@@ -1,10 +1,10 @@
 %h1 Luo uusi joukkue
 
 #contextNavi
-  = link_to image_tag('arrow_left.png', :size => '16x16'), admin_season_partition_path(@season, @partition)
-  = link_to 'Takaisin', admin_season_partition_path(@season, @partition)
+  = link_to image_tag('arrow_left.png', :size => '16x16'), admin_partition_path(@partition)
+  = link_to 'Takaisin', admin_partition_path(@partition)
   
-= semantic_form_for @team, :url => admin_season_partition_team_standings_path() do |form|
+= semantic_form_for @team, :url => admin_partition_team_standings_path() do |form|
   = form.inputs do
     = form.input :name, :label => 'Nimi'
   
