--- a/app/views/layouts/admin/_menu.html.haml
+++ b/app/views/layouts/admin/_menu.html.haml
@@ -2,6 +2,7 @@
   %li= link_to 'Ajankohtaista', admin_news_index_path
   %li= link_to 'Kaudet', admin_seasons_path
   %li= link_to 'Tilastot', admin_latest_standings_path
+  %li= link_to 'Pistepörssi', admin_latest_statistics_path
   %li= link_to 'Vieraskirja', admin_comments_path
   %li= link_to 'Pelaajat', admin_members_path
   %li= link_to 'Joukkue', admin_current_team_path
