--- a/app/views/admin/news/index.html.haml
+++ b/app/views/admin/news/index.html.haml
@@ -6,20 +6,9 @@
   
 = section_selection
 
-%h2 Uutiset
-%table
-  %thead
-    %tr
-      %th Otsikko
-      %th Aika
-      %th{:colspan => 2}= 'Toiminnot'
-      
-  %tbody
-    - @news.each do |news_post|
-      %tr{ :class => cycle(:odd, :even) }
-
-        %td= news_post
-        %td= news_post.created_at
-        %td.action= link_to image_tag('pencil.png'), edit_admin_news_path(news_post), :title => 'Muokkaa'
-        %td.action= link_to image_tag('cross.png'), admin_news_path(news_post), :title => 'Poista',
-          :confirm => "Haluatko varmasti poistaa uutisen \"#{news_post}\"?", :method => :delete
+- @news.each do |news_post|
+  %h2{:class => 'postTitle'}= link_to news_post, admin_news_path(news_post)
+  %time{:datetime => news_post.created_at.strftime('%Y-%m-%dT%H:%M:%S-%Z')}= news_post.created_at
+  = link_to image_tag('pencil.png', :size => '16x16'), edit_admin_news_path(news_post), :title => 'Muokkaa'
+  = link_to image_tag('cross.png', :size => '16x16'), admin_news_path(news_post), :title => 'Poista',
+    :confirm => "Haluatko varmasti poistaa uutisen \"#{news_post}\"?", :method => :delete
