--- a/app/views/admin/news/new.html.haml
+++ b/app/views/admin/news/new.html.haml
@@ -1,4 +1,4 @@
-%h1= t '.title'
+%h1 Luo uusi uutinen
 
 #contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_news_index_path
@@ -6,5 +6,3 @@
 
 = semantic_form_for @news, :url => admin_news_index_path do |form| 
   = render :partial => 'form', :object => form
-  = form.buttons do
-    = form.commit_button :label => 'Luo uusi'
