Changed to use HTML5 elements.

--- a/app/views/admin/news/edit.html.haml
+++ b/app/views/admin/news/edit.html.haml
@@ -1,12 +1,13 @@
-%h1 Muokkaa uutista
+%header
+  %h1 Muokkaa uutista
 
-#contextNavi
+%nav#contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_news_index_path
   = link_to 'Takaisin', admin_news_index_path
   \|
   = link_to 'Näytä uutinen', admin_news_path(@news)
   
-%time{:datetime => @news.created_at.strftime('%Y-%m-%dT%H:%M:%S-%Z')}= "Luotu #{@news.created_at}"
+%time{:datetime => html5_datetime(@news.created_at)}= "Luotu #{@news.created_at}"
 
 - semantic_form_for @news, :url => admin_news_path(@news) do |form| 
   = render :partial => 'form', :object => form
