--- a/app/views/admin/news/new.html.haml
+++ b/app/views/admin/news/new.html.haml
@@ -1,6 +1,7 @@
-%h1 Luo uusi uutinen
+%header
+  %h1 Luo uusi uutinen
 
-#contextNavi
+%nav#contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_news_index_path
   = link_to 'Takaisin', admin_news_index_path
 
