--- a/app/views/layouts/admin/_header.html.haml
+++ b/app/views/layouts/admin/_header.html.haml
@@ -1,3 +1,2 @@
-.header_left
-  %img{:src => '/images/isb_logo_small.png', :height => 60, :width => 60}
-  %span#header_text Hallintasivut
+%img{:src => '/images/isb_logo_small.png', :height => 60, :width => 60}
+%h1 Hallintasivut
