--- a/app/views/admin/comments/index.html.haml
+++ b/app/views/admin/comments/index.html.haml
@@ -8,7 +8,7 @@
 - @comments.each do |comment|
   %article
     %header
-      %h1{:class => 'postTitle'}= link_to comment, admin_comment_path(comment)
+      %h1{:class => 'postTitle'}= comment
       %p.meta
         = comment.author
         %time{:datetime => html5_datetime(comment.created_at)}= comment.created_at
