--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,5 @@
 body {
-	margin:0px;
-	padding:0px;
+	margin:0px;padding:0px;
 	font-family:"Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
 	background-color:#f7f8fb;
 	color:#5f5f61;
@@ -16,27 +15,31 @@ h2 {
   letter-spacing: 0.1em;
 }
 
-.center-wrapper {
+div.center-wrapper, nav.center-wrapper {
   margin:auto;
   width:988px;
 }
 
 #top {
-  height:60px;
+  height:45px;
   background-color:#768ec5;
 }
 
-#header-wrapper {
+div#main-header {
 	height:200px;
 	background-color:#C4D1EB;
 }
 
-#header img {
+#main-header header{
+  width: 988px;
+}
+
+#main-header img {
   margin-top:10px;
   vertical-align:middle;
 }
 
-#header p {
+#main-header h1 {
   display: inline;
   font: normal 3em verdana, arial, helvetica, sans-seri;
   padding-left:30px; 
@@ -126,7 +129,7 @@ h2 {
   display: none;
 }
 
-#footer
+footer
 {
 	margin:8px 0 0 2px;	
 	border-bottom: solid 1px #c0cdda;
@@ -134,7 +137,7 @@ h2 {
 	width:982px;
 	background-color: #f5f5f5;
 }
-#footer p
+footer p
 {
 	margin:0;
 	font-size:12px;
