--- a/public/stylesheets/dropdown.css
+++ b/public/stylesheets/dropdown.css
@@ -8,7 +8,7 @@ ul.topnav {
 ul.topnav li {
   float: left;
   margin: 0;
-  padding: 0 15px 0 0;
+  padding: 0 12px 0 12px;
   position: relative; /*--Declare X and Y axis base for sub navigation--*/
   height:45px;
 }
@@ -60,9 +60,12 @@ ul.topnav li ul.subnav li a {
   text-decoration: underline;
   margin:0;
   display: block;
+  font-size:0.8em;
+  line-height:0.4em;
 }
 
 ul.topnav li ul.subnav li.section a{
+  font-size:1em;
   padding-left:5px;
   font-weight:bold;
 }
