--- a/public/stylesheets/dropdown.css
+++ b/public/stylesheets/dropdown.css
@@ -6,17 +6,20 @@ ul.topnav {
   font-size: 1.2em;
 }
 ul.topnav li {
-  float: left;
-  margin: 0;
-  padding: 0 12px 0 12px;
-  position: relative; /*--Declare X and Y axis base for sub navigation--*/
-  height:45px;
+  float:left;
+  margin:0;
+  padding:12px 12px 0 12px;
+  position:relative; /*--Declare X and Y axis base for sub navigation--*/
+  height:34px;
+  color:#f7f8fb;
+}
+
+ul.topnav li img {
+  margin:0 0 0 3px;
 }
 ul.topnav li a{
-  padding: 10px 5px;
   color: #f7f8fb;
   display: block;
-  text-decoration: none;
   float: left;
 }
 
@@ -36,9 +39,9 @@ ul.topnav li ul.subnav {
 ul.topnav li ul.subnav li{
   clear:both;
   margin:0;
-  padding:0;
+  padding: 10px 5px;
   width: 200px;
-  line-height: 0.5em;
+  line-height: 0.6em;
   height:auto;
 }
 
@@ -48,9 +51,8 @@ ul.topnav li ul.subnav li.section{
   padding-top:4px;
 }
 
-ul.topnav li ul.subnav li.section:first-child{
+ul.topnav li ul.subnav li.section:first-child {
   border-top:none;
-  margin-top:0;
 }
 
 ul.topnav li ul.subnav li a {
@@ -58,7 +60,6 @@ ul.topnav li ul.subnav li a {
   color:#5f5f61;
   padding-left: 20px;
   text-decoration: underline;
-  margin:0;
   display: block;
   font-size:0.8em;
   line-height:0.4em;
@@ -76,6 +77,7 @@ ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
 
 ul.topnav li.subhover{
   background:#f7f8fb;
+  color:#5f5f61;
 }
 
 ul.topnav li.subhover a{
