--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,21 +1,240 @@
-body {
-	margin:0px;padding:0px;
-	font-family:"Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-	background-color:#f7f8fb;
-	color:#5f5f61;
-}
-
-h1 {
+/* 
+  HTML5 ✰ Boilerplate 
   
+  style.css contains a reset, font normalization and some base styles.
+  
+  credit is left where credit is due.
+  much inspiration was taken from these projects:
+    yui.yahooapis.com/2.8.1/build/base/base.css
+    camendesign.com/design/
+    praegnanz.de/weblog/htmlcssjs-kickstart
+*/
+
+/* 
+  html5doctor.com Reset Stylesheet (Eric Meyer's Reset Reloaded + HTML5 baseline)
+  v1.4 2009-07-27 | Authors: Eric Meyer & Richard Clark
+  html5doctor.com/html-5-reset-stylesheet/
+*/
+
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, samp,
+small, strong, sub, sup, var,
+b, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section, summary,
+time, mark, audio, video {
+  margin:0;
+  padding:0;
+  border:0;
+  outline:0;
+  font-size:100%;
+  vertical-align:baseline;
+  background:transparent;
+}                  
+
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section { 
+    display:block;
 }
 
-h2 {
-  font-family:Georgia, Verdana, Arial, Serif;
-  font-weight: bold;
-  letter-spacing: 0.1em;
+nav ul { list-style:none; }
+
+blockquote, q { quotes:none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after { content:''; content:none; }
+
+a { margin:0; padding:0; font-size:100%; vertical-align:baseline; background:transparent; }
+
+ins { background-color:#ff9; color:#000; text-decoration:none; }
+
+mark { background-color:#ff9; color:#000; font-style:italic; font-weight:bold; }
+
+del { text-decoration: line-through; }
+
+abbr[title], dfn[title] { border-bottom:1px dotted; cursor:help; }
+
+/* tables still need cellspacing="0" in the markup */
+table { border-collapse:collapse; border-spacing:0; }
+
+hr { display:block; height:1px; border:0; border-top:1px solid #ccc; margin:1em 0; padding:0; }
+
+input, select { vertical-align:middle; }
+
+/* END RESET CSS */
+
+
+/* fonts.css from the YUI Library: developer.yahoo.com/yui/
+   Refer to developer.yahoo.com/yui/3/cssfonts/ for font sizing percentages
+
+  There are three custom edits:
+   * remove arial, helvetica from explicit font stack
+   * we normalize monospace styles ourselves
+   * table font-size is reset in the HTML5 reset above so there is no need to repeat
+*/
+body { font:13px/1.231 sans-serif; *font-size:small; } /* hack retained to preserve specificity */
+
+select, input, textarea, button { font:99% sans-serif; }
+
+/* normalize monospace sizing 
+ * en.wikipedia.org/wiki/MediaWiki_talk:Common.css/Archive_11#Teletype_style_fix_for_Chrome
+ */
+pre, code, kbd, samp { font-family: monospace, sans-serif; }
+ 
+
+/* 
+ * minimal base styles 
+ */
+
+
+body, select, input, textarea { 
+  /* #444 looks better than black: twitter.com/H_FJ/statuses/11800719859 */ 
+  color: #444; 
+  /* set your base font here, to apply evenly */
+  /* font-family: Georgia, serif;  */   
 }
 
-div.center-wrapper {
+/* Headers (h1,h2,etc) have no default font-size or margin,
+   you'll want to define those yourself. */ 
+h1,h2,h3,h4,h5,h6 { font-weight: bold; }
+
+/* always force a scrollbar in non-IE */ 
+html { overflow-y: scroll; }
+
+ 
+/* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
+a:hover, a:active { outline: none; }
+
+a, a:active, a:visited { color: #607890; }
+a:hover { color: #036; }
+
+
+ul, ol { margin-left: 1.8em; }
+ol { list-style-type: decimal; }
+
+/* Remove margins for navigation lists */
+nav ul, nav li { margin: 0; } 
+
+small { font-size: 85%; }
+strong, th { font-weight: bold; }
+
+td, td img { vertical-align: top; } 
+
+sub { vertical-align: sub; font-size: smaller; }
+sup { vertical-align: super; font-size: smaller; }
+
+pre { 
+  padding: 15px; 
+  
+  /* www.pathf.com/blogs/2008/05/formatting-quoted-code-in-blog-posts-css21-white-space-pre-wrap/ */
+  white-space: pre; /* CSS2 */
+  white-space: pre-wrap; /* CSS 2.1 */
+  white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
+  word-wrap: break-word; /* IE */
+}
+ 
+textarea { overflow: auto; } /* thnx ivannikolic! www.sitepoint.com/blogs/2010/08/20/ie-remove-textarea-scrollbars/ */
+
+.ie6 legend, .ie7 legend { margin-left: -7px; } /* thnx ivannikolic! */
+
+/* align checkboxes, radios, text inputs with their label
+   by: Thierry Koblentz tjkdesign.com/ez-css/css/base.css  */
+input[type="radio"] { vertical-align: text-bottom; }
+input[type="checkbox"] { vertical-align: bottom; }
+.ie7 input[type="checkbox"] { vertical-align: baseline; }
+.ie6 input { vertical-align: text-bottom; }
+
+/* hand cursor on clickable input elements */
+label, input[type=button], input[type=submit], button { cursor: pointer; }
+ 
+/* webkit browsers add a 2px margin outside the chrome of form elements */  
+button, input, select, textarea { margin: 0; }
+
+/* colors for form validity */
+input:valid, textarea:valid   {  }
+input:invalid, textarea:invalid { 
+      border-radius: 1px;
+    -moz-box-shadow: 0px 0px 5px red; 
+ -webkit-box-shadow: 0px 0px 5px red; 
+         box-shadow: 0px 0px 5px red;
+}
+.no-boxshadow input:invalid, 
+.no-boxshadow textarea:invalid { background-color: #f0dddd; }
+
+
+/* These selection declarations have to be separate.
+   No text-shadow: twitter.com/miketaylr/status/12228805301 
+   Also: hot pink. */
+::-moz-selection{ background: #FF5E99; color:#fff; text-shadow: none; }
+::selection { background:#FF5E99; color:#fff; text-shadow: none; } 
+
+/*  j.mp/webkit-tap-highlight-color */
+a:link { -webkit-tap-highlight-color: #FF5E99; } 
+
+/* make buttons play nice in IE:    
+   www.viget.com/inspire/styling-the-button-element-in-internet-explorer/ */
+button {  width: auto; overflow: visible; }
+ 
+/* bicubic resizing for non-native sized IMG: 
+   code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/ */
+.ie7 img { -ms-interpolation-mode: bicubic; }
+
+
+
+/* 
+ * Non-semantic helper classes 
+ */
+
+/* for image replacement */
+.ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }
+
+/* Hide for both screenreaders and browsers
+   css-discuss.incutio.com/wiki/Screenreader_Visibility */
+.hidden { display: none; visibility: hidden; } 
+
+/* Hide only visually, but have it available for screenreaders 
+   www.webaim.org/techniques/css/invisiblecontent/  &  j.mp/visuallyhidden  */
+.visuallyhidden { position: absolute !important;    
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px); }
+
+/* Hide visually and from screenreaders, but maintain layout */
+.invisible { visibility: hidden; }
+
+/* >> The Magnificent CLEARFIX: Updated to prevent margin-collapsing on child elements << j.mp/bestclearfix */
+.clearfix:before, .clearfix:after {
+  content: "\0020"; display: block; height: 0; visibility: hidden;	
+} 
+
+.clearfix:after { clear: both; }
+/* Fix clearfix: blueprintcss.lighthouseapp.com/projects/15318/tickets/5-extra-margin-padding-bottom-of-page */
+.clearfix { zoom: 1; }
+
+
+
+
+ /* Primary Styles
+    Author: 
+ */
+
+body, html {
+  font-family:"Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+  background-color:#f7f8fb;
+  color:#5f5f61;
+  height:100%;
+}
+
+#container {
+  min-height:100%;
+  position:relative;
+}
+
+div.center-wrapper, aside.center-wrapper{
   margin:auto;
   width:988px;
 }
@@ -26,10 +245,10 @@ div.center-wrapper {
 }
 
 div#main-header {
-	height:206px;
-	background-color:#C4D1EB;
-	border-top: 2px solid #dae3f6;
-	border-bottom: 2px solid #b0c1e5;
+  height:206px;
+  background-color:#C4D1EB;
+  border-top: 2px solid #dae3f6;
+  border-bottom: 2px solid #b0c1e5;
 }
 
 #main-header header{
@@ -50,29 +269,13 @@ div#main-header header h1 {
 }
 
 #breadcrumb {
-	font: normal 0.8em verdana, arial, helvetica, sans-seri;
+  font: normal 0.8em verdana, arial, helvetica, sans-seri;
 }
 
 #breadcrumb, #content, #supporters, #frontpage-news, #frontpage-matches {
   border:1px solid #e1e1e2;
   margin-top:10px;
   padding:10px;
-}
-
-
-.column-in
-{
-	font-family: Arial, Helvetica, sans-serif;
-	margin:0; padding:0.5em 1em;
-}
-	
-
-#content {
-
-}
-
-#supporters {
-  clear:both;
 }
 
 .jcarousel-item {
@@ -104,70 +307,87 @@ div#main-header header h1 {
   width:584px;
 }
 
+div#main {
+  overflow:visible;
+}
+
 #main h1 
 {
-	border-left:5px solid #4e628b;
-	font-family:"Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-	font-weight:bold;
-	font-size: 2.50em;	
-	margin:0 0 10px 0;
-	line-height:105%;
-	padding: 8px 15px 8px 10px;
-	letter-spacing:0.05em;
-	background-color:#e5eef9;
+  border-left:5px solid #4e628b;
+  font-family:"Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+  font-weight:bold;
+  font-size: 2.50em;  
+  margin:0 0 10px 0;
+  line-height:105%;
+  padding: 8px 15px 8px 10px;
+  letter-spacing:0.05em;
+  background-color:#e5eef9;
 }
 
 #main h2 {
-	word-spacing:0.15em;
-	font-family:"Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-	font-weight: normal;	
-	font-size: 20px;
-	color:#4e628b;
-	margin: 6px 0 0 0;
-	padding:0;
+  word-spacing:0.15em;
+  font-family:"Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+  font-weight: normal;  
+  font-size: 20px;
+  color:#4e628b;
+  margin: 6px 0 0 0;
+  padding:0;
 }
 
-.cleaner
-{
-	clear:both;
-	height:0px;
-	margin:0; padding:0;		
-}		
-
-.hiddenfield {
+ul#supporter-carousel {
   display: none;
 }
 
-footer
-{
-	margin:8px 0 0 2px;	
-	border-bottom: solid 1px #c0cdda;
-	border-top: solid 1px #c0cdda;
-	width:982px;
-	background-color: #f5f5f5;
-}
-footer p
-{
-	margin:0;
-	font-size:12px;
-	color: #777;
-	padding-left: 10px;
-	vertical-align: middle;
-	line-height: 30px;
+footer {
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:240px;
+  border-top: 1px solid #c4c4c4;
+  background: #efefec;
+  clear:both;
 }
 
-table.statistics
-{
-	border-collapse:collapse;
-	text-align:center;
+/*
+ * Media queries for responsive design
+ * These follow after primary styles so they will successfully override. 
+ */
+
+@media all and (orientation:portrait) { 
+  /* Style adjustments for portrait mode goes here */
+  
 }
 
-.statistics th
-{
-    border-bottom:2px solid #e4dee1;
+@media all and (orientation:landscape) { 
+  /* Style adjustments for landscape mode goes here */
+  
 }
 
-.statistics td:first-child
-{
-    text-align:left;
+/* Grade-A Mobile Browsers (Opera Mobile, iPhone Safari, Android Chrome)  
+   Consider this: www.cloudfour.com/css-media-query-for-mobile-is-fools-gold/ */
+@media screen and (max-device-width: 480px) {
+  
+  
+  /* Uncomment if you don't want iOS and WinMobile to mobile-optimize the text for you
+     j.mp/textsizeadjust 
+  html { -webkit-text-size-adjust:none; -ms-text-size-adjust:none; } */
 }
+
+/* 
+ * print styles
+ * inlined to avoid required HTTP connection www.phpied.com/delay-loading-your-print-css/ 
+ */
+@media print {
+  * { background: transparent !important; color: #444 !important; text-shadow: none !important; }
+  a, a:visited { color: #444 !important; text-decoration: underline; }
+  a:after { content: " (" attr(href) ")"; } 
+  abbr:after { content: " (" attr(title) ")"; }
+  .ir a:after { content: ""; }  /* Don't show links for images */
+  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
+  thead { display: table-header-group; } /* css-discuss.incutio.com/wiki/Printing_Tables */ 
+  tr, img { page-break-inside: avoid; }
+  @page { margin: 0.5cm; }
+  p, h2, h3 { orphans: 3; widows: 3; }
+  h2, h3{ page-break-after: avoid; }
+}
+
