--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -231,10 +231,9 @@ body, html {
 
 #container {
   min-height:100%;
-  position:relative;
 }
 
-div.center-wrapper, aside.center-wrapper{
+div.center-wrapper, aside.center-wrapper, nav.center-wrapper{
   margin:auto;
   width:988px;
 }
@@ -309,6 +308,8 @@ div#main-header header h1 {
 
 div#main {
   overflow:visible;
+  padding-bottom:220px; /*footer height*/
+  overflow:auto;
 }
 
 #main h1 
@@ -339,10 +340,10 @@ ul#supporter-carousel {
 }
 
 footer {
-  position:absolute;
-  bottom:0;
+  position: relative;
   width:100%;
-  height:240px;
+  margin-top:-220px;
+  height:220px;
   border-top: 1px solid #c4c4c4;
   background: #efefec;
   clear:both;
