--- a/app/views/admin/members/index.html.haml
+++ b/app/views/admin/members/index.html.haml
@@ -1,6 +1,7 @@
-%h1 Pelaajat
+%header
+  %h1 Pelaajat
 
-#contextNavi
+%nav#contextNavi
   %a{:href => new_admin_member_path, :title => 'Luo uusi pelaaja'}= image_tag('add.png', :size => '16x16')
   %a{:href => new_admin_member_path}= 'Luo uusi pelaaja'
 
