--- a/app/views/admin/members/new.html.haml
+++ b/app/views/admin/members/new.html.haml
@@ -1,6 +1,7 @@
-%h1 Luo uusi pelaaja
+%header
+  %h1 Luo uusi pelaaja
 
-#contextNavi
+%nav#contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_members_path
   = link_to 'Takaisin', admin_members_path
   
