--- a/app/views/admin/matches/index.html.haml
+++ b/app/views/admin/matches/index.html.haml
@@ -1,6 +1,7 @@
-%h1 #{@partition}-ottelut kaudella #{@partition.season} 
+%header
+  %h1 #{@partition}-ottelut kaudella #{@partition.season} 
 
-#contextNavi
+%nav#contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_partition_path(@partition)
   = link_to 'Takaisin', admin_partition_path(@partition)
   \|
