Revert "Set proper nav and header elements."
This reverts commit 554394e291dcbf80932517868e156f3ea53890a5.

--- a/app/views/admin/matches/new.html.haml
+++ b/app/views/admin/matches/new.html.haml
@@ -1,7 +1,6 @@
-%header
-  %h1 Uusi ottelu
+%h1 Uusi ottelu
 
-%nav#contextNavi
+#contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_partition_matches_path
   = link_to 'Takaisin', admin_partition_matches_path
 
