--- a/app/views/admin/matches/edit.html.haml
+++ b/app/views/admin/matches/edit.html.haml
@@ -1,7 +1,6 @@
-%header
-  %h1 Muokkaa ottelua #{@match}
+%h1 Muokkaa ottelua #{@match}
 
-%nav#contextNavi
+#contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_partition_matches_path
   = link_to 'Takaisin', admin_partition_matches_path
 
