Implemented front-end home page and news layout.

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,3 +1,3 @@
-.header_left
-  %img{:src => '/images/isb_logo_small.png'}
-  %span#header_text Ilmajoen Salibandy  :: Hallintasivut
+%header
+  %img{:src => '/images/isb-logo-shadow.png', :size => '178x195'}
+  %h1 Ilmajoen Salibandy
