--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,3 +1,3 @@
 %header
-  %img{:src => '/images/isb-logo-shadow.png', :size => '178x195'}
+  %img{:src => '/images/isb-logo-shadow.png', :width => '178' :height => '195'}
   %h1 Ilmajoen Salibandy
