Fixed problem with global menu item paddings.

--- a/app/views/layouts/_global_nav.html.haml
+++ b/app/views/layouts/_global_nav.html.haml
@@ -1,6 +1,6 @@
 %nav{ :id => 'global-nav', :class => 'center-wrapper' }
   %ul.topnav
-    %li= link_to 'Etusivu', '#'
+    %li= link_to 'Etusivu', '/'
     %li
       = link_to 'Miehet', '#'
       %ul.subnav
